--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,18 @@
 [package]
 name = "imacs"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
+rust-version = "1.70"
 authors = ["IMACS Contributors"]
 description = "Intelligent Model-Assisted Code Synthesis - Spec-driven code verification, generation, and testing"
 license = "MIT"
-repository = "https://github.com/imacs-dev/imacs"
+repository = "https://github.com/outboundlabs/imacs"
+homepage = "https://github.com/outboundlabs/imacs"
+documentation = "https://docs.rs/imacs"
 keywords = ["verification", "code-generation", "testing", "specifications", "decision-tables"]
 categories = ["development-tools", "development-tools::testing"]
 readme = "README.md"
+include = ["src/**/*", "README.md", "LICENSE", "CHANGELOG.md"]
 
 [dependencies]
 # Serialization
@@ -47,9 +51,21 @@ schemars = "0.8"
 # Completeness analysis (Phase 5)
 quine-mc_cluskey = "0.2"  # Pure Rust Quine-McCluskey implementation
 
+# Self-update capability
+self_update = { version = "0.41", default-features = false, features = [
+  "archive-tar",
+  "archive-zip",
+  "compression-flate2",
+  "rustls"
+] }
+update-informer = "1.1"
+
 [dev-dependencies]
 proptest = "1.0"
 pretty_assertions = "1.4"
+rstest = "0.18"
+cargo-llvm-cov = "0.6"
+tempfile = "3.10"
 
 [features]
 default = []
@@ -59,3 +75,8 @@ python = []      # Future: tree-sitter-python
 [[bin]]
 name = "imacs"
 path = "src/main.rs"
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
